--- a/rnote-ui/data/ui/settingspanel.ui
+++ b/rnote-ui/data/ui/settingspanel.ui
@@ -410,6 +410,19 @@
                         </child>
                       </object>
                     </child>
+                    <child>
+                      <object class="PenShortcutRow" id="penshortcut_actionpad_row">
+                        <property name="title" translatable="yes">Action-pad action</property>
+                        <property name="subtitle" translatable="yes">Set the action for the action-pad.
+It is activated by a two-finger long-press with touch-input</property>
+                        <child type="prefix">
+                          <object class="GtkImage">
+                            <property name="icon_name">actionpad-longpress-symbolic</property>
+                            <property name="icon-size">large</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
