--- a/rnote-ui/data/ui/style.css
+++ b/rnote-ui/data/ui/style.css
@@ -69,6 +69,24 @@
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
+.action_pad {
+    color: unset;
+    background: unset;
+    border: unset;
+    box-shadow: unset;
+    border-radius: 18px;
+    transition: border 0.15s, box-shadow 0.15s;
+}
+
+.action_pad:hover {
+    border: 1px solid lighter(@accent_color);
+}
+
+.action_pad:active {
+    border: 1px solid @accent_color;
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
+}
+
 .workspace-listbox {
     transition: color 0.15s;
 }
